add relative path in pom in inventor and order

--- a/order/pom.xml
+++ b/order/pom.xml
@@ -5,6 +5,7 @@
         <groupId>counterly.springframework</groupId>
         <artifactId>counterly-bom</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../bom/pom.xml</relativePath>
     </parent>
 
     <artifactId>order</artifactId>
