initial code run

--- a/order/pom.xml
+++ b/order/pom.xml
@@ -8,10 +8,9 @@
         <relativePath>../bom/pom.xml</relativePath>
     </parent>
 
-    <artifactId>order</artifactId>
-    <name>order</name>
-    <url>http://maven.apache.org</url>
-    <packaging>pom</packaging>
+    <artifactId>counterly.order</artifactId>
+    <name>counterly order</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -31,4 +30,18 @@
             <artifactId>ehcache</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                </configuration>
+            </plugin>
+        
+        </plugins>
+    </build>
 </project>
