--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -41,6 +41,7 @@
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <jaxb.version>3.0.2</jaxb.version>
         <awaitility.version>4.3.0</awaitility.version>
