--- a/order/pom.xml
+++ b/order/pom.xml
@@ -41,7 +41,17 @@
                     <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
-        
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
