Implement creation and deployment of minikube in jenkins file

--- a/order/pom.xml
+++ b/order/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>counterly.order</artifactId>
-    <name>counterly order</name>
+    <name>order</name>
     <packaging>jar</packaging>
 
     <dependencies>
