add product services

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=inventory-service
+spring.application.name=order-service
 #sfg.brewery.beer-order-service-host=http://localhost:8082
 #sfg.brewery.order-user=good
 #sfg.brewery.order-password=beer
