--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -8,14 +8,25 @@
         <relativePath>../bom/pom.xml</relativePath>
     </parent>
 
-    <artifactId>inventory</artifactId>
+    <artifactId>counterly.inventory</artifactId>
     <name>inventory</name>
-    <url>http://maven.apache.org</url>
     <packaging>jar</packaging>
 
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
