--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>bom</module>
         <module>inventory</module>
         <module>order</module>
+        <module>product</module>
     </modules>
 
     <properties>
