--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>bom</module>
+        <module>common</module>
         <module>inventory</module>
         <module>order</module>
         <module>product</module>
