--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=product-service
-spring.datasource.username=beer_service
-spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=adminfcc
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/counterly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 spring.datasource.hikari.maximum-pool-size=5
+logging.level.org.springframework.web=DEBUG
 
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
