implement spring security in product-service

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ server.port=8082
 #
 ## Spring Data hangs when not set under Spring Boot 2.3.0
 #spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
