--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=8084
-application-title=User Service
-spring.application.name=user-service
+server.port=8086
+application-title=Product Service
+spring.application.name=product-service
 
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 
-spring.datasource.username=root
-spring.datasource.password=adminfcc
+spring.datasource.username=product
+spring.datasource.password=product
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/counterly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
@@ -26,7 +26,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework.web=DEBUG
 
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
-springdoc.swagger-ui.operationsSorter=method
 
