--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -157,6 +157,11 @@
             <version>${spring-kubernetes.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-kubernetes-discoveryclient</artifactId>
         </dependency>
