--- a/config/product-service/application.yml
+++ b/config/product-service/application.yml
@@ -1,5 +1,7 @@
 # This file applies to ALL microservices by default
 spring:
+  server:
+    port: 8086
   datasource:
     url: jdbc:mysql://localhost:3306/counterly
     username: product
