--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>common</module>
+        <module>config-server</module>
         <module>eureka-server</module>
         <module>gateway-service</module>
         <module>auth-service</module>
