add spring security for config service

--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.cloud.config.server.git.search-paths=config/{application}
 logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
 
-#spring.security.user.name=username
-#spring.security.user.password=password
+spring.security.user.name=username
+spring.security.user.password=password
