--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     name: product-service
   config:
     import: "configserver:http://localhost:8888/"
+
+  cloud:
+    config:
+      username: username
+      password: password
